--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.14.5
-imutils==0.4.6
-dlib==19.15.0
-opencv-python==3.4.2.17
-opencv-contrib-python==3.4.2.17
+numpy
+imutils
+dlib
+opencv-python
+opencv-contrib-python
